# dcm_pytorch

./: .gitignore  CLAUDE.md  README.md  VERIFICATION.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REFERENCES.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v0.1.0-MILESTONE-AUDIT.md
.planning/milestones/: v0.1.0-REQUIREMENTS.md  v0.1.0-ROADMAP.md  v0.2.0-MILESTONE-AUDIT.md  v0.2.0-REQUIREMENTS.md  v0.2.0-ROADMAP.md
.planning/phases/01-neural-hemodynamic-forward-model/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-spectral-dcm-forward-model/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-regression-dcm-forward-model/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-pyro-generative-models/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-parameter-recovery-tests/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
benchmarks/: __init__.py  bilinear_metrics.py  calibration_analysis.py  calibration_sweep.py  config.py  fixtures.py  generate_fixtures.py  metrics.py  plotting.py  run_all_benchmarks.py  timing_profiler.py
benchmarks/runners/: __init__.py  rdcm_vb.py  spectral_amortized.py  spectral_svi.py  spm_reference.py  task_amortized.py  task_bilinear.py  task_svi.py
cluster/: 99_push_phase16_results.slurm  README.md  run_phase16_acceptance.slurm  submit_phase16.sh
cluster/logs/: phase16_54900993.err  phase16_54900993.out  phase16_54901072.out  phase16_54902455.out  phase16_54933838.out  push_phase16_54900994.err  push_phase16_54900994.out  push_phase16_54901073.err  push_phase16_54901073.out  push_phase16_54902456.err  push_phase16_54902456.out  push_phase16_54933839.err  push_phase16_54933839.out
cluster/results/: phase16_acceptance_54901072.json  phase16_acceptance_54901072.md  phase16_acceptance_54902455.json  phase16_acceptance_54902455.md  phase16_acceptance_54933838.json  phase16_acceptance_54933838.md
configs/: heart2adapt_dcm_config.json
docs/: HANDOFF_viz.md  dcm_circuit_explorer_template.html
docs/02_pipeline_guide/: consumer_bilinear_quickstart.md  guide_selection.md  quickstart.md
docs/03_methods_reference/: equations.md  methods.md  methods.tex  references.bib
docs/04_scientific_reports/: benchmark_report.md
scripts/: debug_phase16_fixture_check.py  debug_phase16_nan_seeds.py  debug_phase16_pool_smoke.py  demo_bilinear_consumer.py  generate_training_data.py  train_amortized_guide.py
src/pyro_dcm/: __init__.py
tests/: conftest.py  test_amortized_benchmark.py  test_amortized_spectral_dcm.py  test_amortized_task_dcm.py  test_balloon.py  test_benchmark_metrics.py  test_bilinear_metrics.py  test_bilinear_simulator.py  test_bilinear_utils.py  test_bold_signal.py  test_circuit_viz.py  test_coupled_system_bilinear.py  test_csd_computation.py  test_elbo_model_comparison.py  test_elbo_variants.py  test_guide_factory.py  test_linear_invariance.py  test_model_ranking_validation.py  test_neural_state.py  test_ode_integrator.py  test_parameter_packing.py  test_posterior_extraction.py  test_rdcm_forward.py  test_rdcm_model.py  test_rdcm_posterior.py  test_rdcm_recovery.py  test_rdcm_simulator.py  test_spectral_dcm_model.py  test_spectral_dcm_recovery.py  test_spectral_noise.py  test_spectral_simulator.py  test_spectral_transfer.py  test_spm_spectral_dcm_validation.py  test_spm_task_dcm_validation.py  test_stability_monitor.py  test_stimulus_utils.py  test_summary_networks.py  test_svi_integration.py  test_tapas_rdcm_validation.py  test_task_bilinear_benchmark.py  (+5 more)
validation/: VALIDATION_REPORT.md  __init__.py  compare_results.py  export_to_mat.py  run_rdcm_validation.py  run_validation.py
validation/matlab_scripts/: run_spm_spectral_dcm.m  run_spm_task_dcm.m  run_tapas_rdcm.m
(+140 files in other folders)
